--- a/index.html
+++ b/index.html
@@ -125,6 +125,11 @@ html, body {
   <label>Buscar comuna</label>
   <input id="comuna-input" placeholder="Escriba una comuna">
   <div id="dropdown"></div>
+  
+    <div id="leyenda-av">
+    <span class="linea-av"></span>
+    Autopista Américo Vespucio
+  </div>
 </div>
 
 <div id="map"></div>
