--- a/index.html
+++ b/index.html
@@ -116,6 +116,26 @@ html, body {
     stroke-width: 3;
   }
 }
+
+/* ===============================
+   LEYENDA AUTOPISTA
+================================ */
+
+#leyenda-av {
+  margin-top: 8px;
+  display: flex;
+  align-items: center;
+  gap: 6px;
+  font-size: 12px;
+  color: #333;
+}
+
+.linea-av {
+  width: 24px;
+  height: 4px;
+  background: #c00000;
+  border-radius: 2px;
+}
 </style>
 </head>
 
@@ -125,8 +145,9 @@ html, body {
   <label>Buscar comuna</label>
   <input id="comuna-input" placeholder="Escriba una comuna">
   <div id="dropdown"></div>
-  
-    <div id="leyenda-av">
+
+  <!-- Leyenda Autopista Américo Vespucio -->
+  <div id="leyenda-av">
     <span class="linea-av"></span>
     Autopista Américo Vespucio
   </div>
