--- a/index.html
+++ b/index.html
@@ -71,6 +71,45 @@ html, body {
 }
 
 /* ===============================
+   LEYENDA AUTOPISTA
+================================ */
+
+#leyenda-av {
+  margin-top: 8px;
+  display: flex;
+  align-items: center;
+  gap: 6px;
+  font-size: 12px;
+  color: #333;
+}
+
+.linea-av {
+  width: 24px;
+  height: 4px;
+  background: #c00000;
+  border-radius: 2px;
+}
+
+/* ===============================
+   TITULO COMUNA
+================================ */
+
+#titulo-comuna {
+  position: absolute;
+  top: 15px;
+  left: 50%;
+  transform: translateX(-50%);
+  background: white;
+  padding: 8px 18px;
+  font-size: 18px;
+  font-weight: bold;
+  border-radius: 6px;
+  box-shadow: 0 2px 6px rgba(0,0,0,0.2);
+  z-index: 900;
+  pointer-events: none;
+}
+
+/* ===============================
    INFO
 ================================ */
 
@@ -116,26 +155,6 @@ html, body {
     stroke-width: 3;
   }
 }
-
-/* ===============================
-   LEYENDA AUTOPISTA
-================================ */
-
-#leyenda-av {
-  margin-top: 8px;
-  display: flex;
-  align-items: center;
-  gap: 6px;
-  font-size: 12px;
-  color: #333;
-}
-
-.linea-av {
-  width: 24px;
-  height: 4px;
-  background: #c00000;
-  border-radius: 2px;
-}
 </style>
 </head>
 
@@ -146,12 +165,14 @@ html, body {
   <input id="comuna-input" placeholder="Escriba una comuna">
   <div id="dropdown"></div>
 
-  <!-- Leyenda Autopista Américo Vespucio -->
   <div id="leyenda-av">
     <span class="linea-av"></span>
     Autopista Américo Vespucio
   </div>
 </div>
+
+<!-- TITULO COMUNA -->
+<div id="titulo-comuna">—</div>
 
 <div id="map"></div>
 
@@ -257,6 +278,9 @@ function seleccionar(layer, nombre) {
 
   document.getElementById("info").innerHTML =
     `<strong>${nombre}</strong><br>Flete: $${FLETE_BASE.toLocaleString("es-CL")}`;
+
+  // MOSTRAR NOMBRE COMUNA
+  document.getElementById("titulo-comuna").textContent = nombre;
 }
 
 /* ===============================
